--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   		<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
-		<link rel="stylesheet" type="text/css" href="css/portfolio.css">
+		<link rel="stylesheet" type="text/css" href="portfolio.css">
 
 		<!-- <script type="text/javascript" src="portfolio.js"></script> -->
 	</head>
