Fixed images; from png to PNG

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="col-xs-6 col-sm-4 col-md-4">
 					<div class="thumbnail">
 						<h3>Tower In The Sky</h3>
-						<a href="http://users.csc.calpoly.edu/~sche/Release/" target="_blank"><img class="img-responsive" src="assets/towerInTheSky.png" alt="..."></a>
+						<a href="http://users.csc.calpoly.edu/~sche/Release/" target="_blank"><img class="img-responsive" src="assets/towerInTheSky.PNG" alt="..."></a>
 						<div class="caption">
 							<p>► A work of interactive fiction<br>
 						    ► You are sent on a mission to retrieve the dark orb (rumored to possess immense power capable of destroying mankind) hidden somewhere in the Black Necromancer's Tower in the Sky before its power is harnessed for evil purposes.</p>
@@ -116,7 +116,7 @@
 				<div class="col-xs-6 col-sm-4 col-md-4">
 					<div class="thumbnail">
                         <h3>Tribute Page</h3>
-                        <a href="http://codepen.io/ohshixsharon/full/zBWmLy/" target="_blank"><img class="img-responsive" src="assets/tributePage.png" alt="..."></a>
+                        <a href="http://codepen.io/ohshixsharon/full/zBWmLy/" target="_blank"><img class="img-responsive" src="assets/tributePage.PNG" alt="..."></a>
                         <!--http://65.media.tumblr.com/434b9c839e6f96be83e06a814cf77f0f/tumblr_oc4vonSW9T1ql9xivo1_1280.png-->
                         <div class="caption">
 							<p>► A FreeCodeCamp project, <a href="https://www.freecodecamp.com/challenges/build-a-tribute-page" style="text-decoration: none">Build a Tribute Page</a><br>
@@ -136,7 +136,7 @@
 				<div class="col-xs-6 col-sm-4 col-md-4">
 					<div class="thumbnail">
 						<h3>Random Quote Machine</h3>
-						<a href="http://codepen.io/ohshixsharon/full/WxyRAE/" target="_blank"><img class="img-responsive" src="assets/quoteMachine.png" alt="..."></a>
+						<a href="http://codepen.io/ohshixsharon/full/WxyRAE/" target="_blank"><img class="img-responsive" src="assets/quoteMachine.PNG" alt="..."></a>
 						<div class="caption">
 							<p>► A FreeCodeCamp project, <a href="https://www.freecodecamp.com/challenges/build-a-random-quote-machine" style="text-decoration: none">Build a Random Quote Machine</a><br>
 						    ► Users can generate a random League of Legends champion quote, and tweet it<br>
@@ -152,7 +152,7 @@
 				<div class="col-xs-6 col-sm-4 col-md-4">
 					<div class="thumbnail">
 						<h3>Local Weather App</h3>
-						<a href="http://codepen.io/ohshixsharon/full/amOqNr/" target="_blank"><img class="img-responsive" src="assets/localWeatherApp.png"></a>
+						<a href="http://codepen.io/ohshixsharon/full/amOqNr/" target="_blank"><img class="img-responsive" src="assets/localWeatherApp.PNG"></a>
 						<div class="caption">
 							<p>► A FreeCodeCamp project, <a href="https://www.freecodecamp.com/challenges/show-the-local-weather" style="text-decoration: none">Show the Local Weather</a><br>
 						    ► Users can view the weather at their current location, and can toggle between fahrenheit and celsius
@@ -169,7 +169,7 @@
 				<div class="col-xs-6 col-sm-4 col-md-4">
 					<div class="thumbnail">
 						<h3>Wikipedia Viewer</h3>
-						<a href="http://codepen.io/ohshixsharon/full/VKvXjm" target="_blank"><img class="img-responsive" src="assets/wikipediaViewer.png"></a>
+						<a href="http://codepen.io/ohshixsharon/full/VKvXjm" target="_blank"><img class="img-responsive" src="assets/wikipediaViewer.PNG"></a>
 						<div class="caption">
 							<p>► A FreeCodeCamp project, <a href="https://www.freecodecamp.com/challenges/build-a-wikipedia-viewer" style="text-decoration: none">Build a Wikipedia Viewer</a><br>
 							► Users can search Wikipedia entries in a search box and see the resulting Wikipedia entries
