Added a project and updated resume

--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
 			<div class="row">
 				<div class="col-xs-6 col-sm-4 col-md-4">
 					<div class="thumbnail">
-						<h3>Tower In The Sky</h3>
-						<a href="http://users.csc.calpoly.edu/~sche/Release/" target="_blank"><img class="img-responsive" src="assets/towerInTheSky.PNG" alt="..."></a>
+						<h3>Shepherd</h3>
+						<a href="http://users.csc.calpoly.edu/~zwood/teaching/csc476/final17/shepherd/" target="_blank"><img class="img-responsive" width="100%" height="50" src="assets/PlayerPing.PNG" alt="..."></a>
 						<div class="caption">
-							<p>► A work of interactive fiction<br>
-						    ► You are sent on a mission to retrieve the dark orb (rumored to possess immense power capable of destroying mankind) hidden somewhere in the Black Necromancer's Tower in the Sky before its power is harnessed for evil purposes.</p>
+							<p>► Final project for CPE 476: Real-Time 3D Computer Graphics Software<br>
+						    ► As the last remaining member of a Shepherd family, continue your duty of protecting the sheeps from hungry packs of wolves and herd them to safety!</p>
 							<div class="btn-group">
-							  <button type="button" class="btn btn-primary">Inform 7</button>
+							  <button type="button" class="btn btn-primary">Visual Studio</button>
+							  <button type="button" class="btn btn-primary">C/C++</button>
+							  <button type="button" class="btn btn-primary">OpenGL</button>
 							</div>
 						</div>
 					</div>
@@ -104,6 +106,7 @@
 						<a href="http://users.csc.calpoly.edu/~zwood/teaching/csc471/finalW16_1/sche/index.html" target="_blank"><img class="img-responsive" src="http://users.csc.calpoly.edu/~zwood/teaching/csc471/finalW16_1/sche/images/KirbyGame.jpg"></a>
 						<div class="caption">
 							<p>► Final project for CPE 471: Introduction to Computer Graphics<br>
+						     ►Avoid getting beaten with a spear by the Waddledees and consume as much ice cream as it takes to satisfy you!
 							</p>
 							<div class="btn-group">
 							  <button type="button" class="btn btn-primary">Visual Studio</button>
@@ -186,8 +189,8 @@
 						</div>
 					</div>
 				</div>
-			</div>
 
+			</div>
 
 		</div>
 	  </div>
