Updated profile picture and intro

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		    				<h4><strong>Hello, World.</strong></h4>
 			                 <p>&emsp;&emsp;My name is 
 			                 <span style="color: rgb(114, 223, 250); font-weight: bold">Sharon Che</span>. I am currently a
-			                 <span style="color: rgb(114, 223, 250); font-weight: bold">fourth</span> year student majoring in
+			                 <span style="color: rgb(114, 223, 250); font-weight: bold">fifth</span> year student majoring in
 			                 <span style="color: rgb(114, 223, 250); font-weight: bold">computer science</span> at
 			                 <span style="color: rgb(114, 223, 250); font-weight: bold">California Polytechnic State University, San Luis Obispo</span>.
 			                 </p>
@@ -59,7 +59,7 @@
 			            </div>
 
 		    			<div class="col-md-1">
-		    				<img src="https://pbs.twimg.com/profile_images/586093266057043968/KCxf-z8b.jpg" height="175px" width="90px">
+		    				<img src="assets/profile_picture.png" height="175px" width="90px">
 		    			</div>
 		    			<div class="col-md-2">
 		    				<h2>Sharon Che</h2>
