--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 		    			<div class="col-md-6">
 		    				<h4><strong>Hello, World.</strong></h4>
 			                 <p>&emsp;&emsp;My name is 
-			                 <span style="color: rgb(114, 223, 250); font-weight: bold">Sharon Che</span>. I am currently a
-			                 <span style="color: rgb(114, 223, 250); font-weight: bold">fifth</span> year student majoring in
-			                 <span style="color: rgb(114, 223, 250); font-weight: bold">computer science</span> at
+			                 <span style="color: rgb(114, 223, 250); font-weight: bold">Sharon Che</span>. I am a
+			                 <span style="color: rgb(114, 223, 250); font-weight: bold">recent computer science graduate</span> from 
 			                 <span style="color: rgb(114, 223, 250); font-weight: bold">California Polytechnic State University, San Luis Obispo</span>.
+			                 I am currently seeking entry-level software engineering opportunities.  
 			                 </p>
 			            </div>
 
 			            <div class="col-md-3">
 			            	<p>
 			            		Some of my interests include:<br>		     
-			            		<span style="color: rgb(114, 223, 250)">📖</span>&emsp;Reading mangas<br>
-			            		<span style="color: rgb(114, 223, 250)">📺</span>&emsp;Watching asian dramas<br>
-			            		<span style="color: rgb(114, 223, 250)">🎼</span>&emsp;Playing the piano<br>
+			            		<span style="color: rgb(114, 223, 250)">📱</span>&emsp;Mobile App Development<br>
+			            		<span style="color: rgb(114, 223, 250)">💻</span>&emsp;Web Development<br>
+			            		<span style="color: rgb(114, 223, 250)">🎮</span>&emsp;Game Development<br>
 
 			            	</p>
 			            </div>
 
 		    			<div class="col-md-1">
-		    				<img src="assets/profile_picture.png" height="175px" width="90px">
+		    				<img src="assets/profile_pic.jpg" height="175px" width="100px">
 		    			</div>
 		    			<div class="col-md-2">
-		    				<h2>Sharon Che</h2>
+		    				<h2><center>Sharon Che</center></h2>
 		    				<a href="assets/Sharon_Che_Resume.pdf" style="text-decoration: none" target="_blank">
 		    					<div class="btn">Resume</div>
 		    			    </a>
